; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_color_utils.c_hsv2grb.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_color_utils.c_hsv2grb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hsv2grb(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %16 = load i32, i32* %4, align 4
  %17 = srem i32 %16, 360
  %18 = sdiv i32 %17, 60
  store i32 %18, i32* %7, align 4
  %19 = load i32, i32* %5, align 4
  %20 = sub nsw i32 255, %19
  %21 = load i32, i32* %6, align 4
  %22 = mul nsw i32 %20, %21
  %23 = ashr i32 %22, 8
  store i32 %23, i32* %8, align 4
  %24 = load i32, i32* %6, align 4
  store i32 %24, i32* %9, align 4
  %25 = load i32, i32* %9, align 4
  %26 = load i32, i32* %8, align 4
  %27 = sub nsw i32 %25, %26
  %28 = load i32, i32* %4, align 4
  %29 = srem i32 %28, 60
  %30 = mul nsw i32 %27, %29
  %31 = sdiv i32 %30, 60
  %32 = load i32, i32* %8, align 4
  %33 = add nsw i32 %31, %32
  store i32 %33, i32* %10, align 4
  %34 = load i32, i32* %9, align 4
  %35 = load i32, i32* %8, align 4
  %36 = sub nsw i32 %34, %35
  %37 = load i32, i32* %4, align 4
  %38 = srem i32 %37, 60
  %39 = sub nsw i32 60, %38
  %40 = mul nsw i32 %36, %39
  %41 = sdiv i32 %40, 60
  %42 = load i32, i32* %8, align 4
  %43 = add nsw i32 %41, %42
  store i32 %43, i32* %11, align 4
  %44 = load i32, i32* %7, align 4
  switch i32 %44, label %69 [
    i32 0, label %45
    i32 1, label %49
    i32 2, label %53
    i32 3, label %57
    i32 4, label %61
    i32 5, label %65
  ]

45:                                               ; preds = %3
  %46 = load i32, i32* %9, align 4
  store i32 %46, i32* %12, align 4
  %47 = load i32, i32* %10, align 4
  store i32 %47, i32* %13, align 4
  %48 = load i32, i32* %8, align 4
  store i32 %48, i32* %14, align 4
  br label %69

49:                                               ; preds = %3
  %50 = load i32, i32* %11, align 4
  store i32 %50, i32* %12, align 4
  %51 = load i32, i32* %9, align 4
  store i32 %51, i32* %13, align 4
  %52 = load i32, i32* %8, align 4
  store i32 %52, i32* %14, align 4
  br label %69

53:                                               ; preds = %3
  %54 = load i32, i32* %8, align 4
  store i32 %54, i32* %12, align 4
  %55 = load i32, i32* %9, align 4
  store i32 %55, i32* %13, align 4
  %56 = load i32, i32* %10, align 4
  store i32 %56, i32* %14, align 4
  br label %69

57:                                               ; preds = %3
  %58 = load i32, i32* %8, align 4
  store i32 %58, i32* %12, align 4
  %59 = load i32, i32* %11, align 4
  store i32 %59, i32* %13, align 4
  %60 = load i32, i32* %9, align 4
  store i32 %60, i32* %14, align 4
  br label %69

61:                                               ; preds = %3
  %62 = load i32, i32* %10, align 4
  store i32 %62, i32* %12, align 4
  %63 = load i32, i32* %8, align 4
  store i32 %63, i32* %13, align 4
  %64 = load i32, i32* %9, align 4
  store i32 %64, i32* %14, align 4
  br label %69

65:                                               ; preds = %3
  %66 = load i32, i32* %9, align 4
  store i32 %66, i32* %12, align 4
  %67 = load i32, i32* %8, align 4
  store i32 %67, i32* %13, align 4
  %68 = load i32, i32* %11, align 4
  store i32 %68, i32* %14, align 4
  br label %69

69:                                               ; preds = %3, %65, %61, %57, %53, %49, %45
  %70 = load i32, i32* %13, align 4
  %71 = shl i32 %70, 16
  %72 = load i32, i32* %12, align 4
  %73 = shl i32 %72, 8
  %74 = or i32 %71, %73
  %75 = load i32, i32* %14, align 4
  %76 = or i32 %74, %75
  store i32 %76, i32* %15, align 4
  %77 = load i32, i32* %15, align 4
  ret i32 %77
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
